--- a/Templates10/TemplateFormat10.yml
+++ b/Templates10/TemplateFormat10.yml
@@ -464,7 +464,7 @@ Resources:
       Tags:
         - Key: Name
           Value: !Sub TargetGroup-${NameBase}
-    DependsOn: MyDBInstance 
+    DependsOn: MyEC2Instance 
 
 
 
