--- a/Templates10/TemplateFormat10.yml
+++ b/Templates10/TemplateFormat10.yml
@@ -458,6 +458,8 @@ Resources:
       Protocol: HTTP
       Port: 80
       TargetType: instance
+      Targets:
+        - Id: !Ref MyEC2Instance
       HealthCheckPath: /
       Matcher:
         HttpCode: "200"
